<?xml version="1.0" encoding="utf-8"?>

<!-- 

  Copyright 2014 Sergio Carrozzo

  This file is part of Facial Expression Recognizer.

  Facial Expression Recognizer is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

   Facial Expression Recognizer is distributed in the hope that it will be useful,
   but WITHOUT ANY WARRANTY; without even the implied warranty of
   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
   GNU General Public License for more details.

   You should have received a copy of the GNU General Public License
   along with Facial Expression Recognizer.  If not, see <http://www.gnu.org/licenses/>.
   
 -->


<resources>

    <string name="app_name">Facial Expression Recognizer</string>
    <string name="action_settings">Settings</string>

    <color name="gray">#EEEEEE</color>

    <string name="recFromEx">Recognize From Photo</string>
    <string name="recFromExDetails">Recognize expressions in an existent photo</string>
    <string name="takeAndRecDetails">Take a photo and recognize it</string>
    <string name="takeAndRec">Capture &amp; Recognize</string>
    <string name="productInfo">Product Info</string>
    <string name="SavedExpr">Saved Expressions</string>
    <string name="SavedExprDetails">See your saved expressions.</string>
    <string name="title_activity_recognize_from_ex">Recognize From Gallery</string>
    <string name="faceImageRec">Result Image</string>
    <string name="tapToZoom">Touch to Zoom</string>
    <string name="progressDialog_Title">Recognition in Progress</string>
    <string name="progressDialog_faces">Searching faces</string>
    <string name="progressDialog_expr">Find expressions</string>
    <string name="progressDialog_loadImg">Loading Image</string>
    <string name="action_settings_showExprPerc">Show Expression Percentage</string>
    <string name="noFaceRecognized">No one face recognized</string>
    <string name="noFaceSelected">Select one face</string>
    <string name="action_settings_saveToGallery">Save Current in Gallery</string>
    <string name="title_activity_capture_and_rec">Take and Recognize</string>
    <string name="title_activity_savedExpressions">Your Saved Expressions</string>
    <string name="action_settings_saveAll">Save all faces</string>
    <string name="deleteImageGridView">Delete</string>
    <string name="action_settings_deleteAll">Delete All</string>
    <string name="action_settings_imagedetails">Details</string>
    <string name="title_activity_expressionDetail">Expression Detail</string>
    <string name="app_id">731852480184743</string>
    <string name="action_settings_Share">Share</string>
    <string name="action_settings_saveGallery">Save to Gallery</string>
    <string name="savedExpressions_nothingToDelete">Nothing to Delete</string>
    <string name="savedExpressions_sureToDelete">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="failToSave">Fail to Save</string>
    <string name="saveSuccess">Save Successful</string>
    <string name="failToDelete">Error. Can\'t delete</string>
    <string name="deleteSuccess">Delete Success</string>
    <string name="exp_neutral">Neutral: </string>
    <string name="exp_happy">Happy: </string>
    <string name="exp_surprise">Surprise: </string>
    <string name="exp_anger">Anger: </string>
    <string name="exp_fear">Fear: </string>
    <string name="exp_sad">Sad: </string>
    <string name="exp_disgust">Disgust: </string>
    <string name="classErr">haarcascade_frontalface_default.xml not found</string>
    <string name="title_settings_activity">Settings</string>
    <string name="settings_textview">Expression Label Style</string>
    <string name="settings_radioRandom">Gray label and random bar color</string>
    <string name="settings_radioSelect">Custom colors</string>
    <string name="settings_textviewLabel">Label color</string>
    <string name="settings_textviewBars">Bar colors</string>
    <string name="color_blue">Blue</string>
    <string name="color_black">Black</string>
    <string name="color_red">Red</string>
    <string name="color_green">Green</string>
    <string name="color_cyan">Cyan</string>
    <string name="color_magenta">Magenta</string>
    <string name="color_yellow">Yellow</string>
    <string name="color_white">White</string>
    <string name="title_about_activity">Product Information</string>
    <string name="gridMultipleDelete">Multiple delete</string>
    <string name="grid_context_menu_oneItemSelected">One item selected</string>
    <string name="grid_context_menu_moreItemsSelected">items selected</string>
    <string name="grid_context_menuTitle_selItems">Select Items</string>
    <string name="grid_context_menuSubTitle_selItems">One item selected</string>
    <string name="product_info">
Facial Expression Recognizer v1.2\n
Copyright 2014 Sergio Carrozzo\n
GNU GPL v3\n\n
    This program is free software: you can redistribute it and/or modify\n
    it under the terms of the GNU General Public License as published by\n
    the Free Software Foundation, either version 3 of the License, or\n
    (at your option) any later version.\n\n
    This program is distributed in the hope that it will be useful,\n
    but WITHOUT ANY WARRANTY; without even the implied warranty of\n
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the\n
    GNU General Public License for more details.\n\n
    You should have received a copy of the GNU General Public License\n
    along with this program.  If not, see  http://www.gnu.org/licenses/>.\n\n
You can find the source code for this software at the following link:\n
http://scarrozzo.altervista.org/\n
or contact me at: sergio.carrozzo@gmail.com\n\n
The algorithms for the recognition of expressions have been written using the library javaCV (https://github.com/bytedeco), under GNU GPL v2. You can get a copy of the GNU GPL v2 by downloading the source code, or at the following link: https://www.gnu.org/licenses/gpl-2.0.txt \n\n
This software also includes third-party libraries under the Apache 2.0 license (therefore compatible with GNU GPL v3). You can get a copy of the Apache 2.0 license by downloading the source code, or at the following link: http://www.apache.org/licenses/LICENSE-2.0.html.\n
As reported in the NOTICE file (you can get it downloading the sources), the libraries used are:\n
1) Encog Machine Learning Library. See more at: http://www.heatonresearch.com/encog\n
2) Photo View library, written by Chris Banes (https://github.com/chrisbanes/PhotoView).\n\n
Face detection is implemented using “haarcascade_frontalface_default.xml”, under the following license:\n\n
Stump-based 24x24 discrete(?) adaboost frontal face detector.\n
    Created by Rainer Lienhart.\n\n
////////////////////////////////////////////////////////////////////////////////////////\n
\n
  IMPORTANT: READ BEFORE DOWNLOADING, COPYING, INSTALLING OR USING.\n
\n
  By downloading, copying, installing or using the software you agree to this license.\n
  If you do not agree to this license, do not download, install,\n
  copy or use the software.\n
\n
\n
                        Intel License Agreement\n
                For Open Source Computer Vision Library\n
\n
 Copyright (C) 2000, Intel Corporation, all rights reserved.\n
 Third party copyrights are property of their respective owners.\n
\n
 Redistribution and use in source and binary forms, with or without modification,\n
 are permitted provided that the following conditions are met:\n
\n
   * Redistribution\'s of source code must retain the above copyright notice,\n
     this list of conditions and the following disclaimer.\n
\n
   * Redistribution\'s in binary form must reproduce the above copyright notice,\n
     this list of conditions and the following disclaimer in the documentation\n
     and/or other materials provided with the distribution.\n
\n
   * The name of Intel Corporation may not be used to endorse or promote products\n
     derived from this software without specific prior written permission.\n
\n
 This software is provided by the copyright holders and contributors "as is" and\n
 any express or implied warranties, including, but not limited to, the implied\n
 warranties of merchantability and fitness for a particular purpose are disclaimed.\n
 In no event shall the Intel Corporation or contributors be liable for any direct,\n
 indirect, incidental, special, exemplary, or consequential damages\n
 (including, but not limited to, procurement of substitute goods or services;\n
 loss of use, data, or profits; or business interruption) however caused\n
 and on any theory of liability, whether in contract, strict liability,\n
 or tort (including negligence or otherwise) arising in any way out of\n
 the use of this software, even if advised of the possibility of such damage.\n
        \n
    </string>
    <string name="dialog_title_product_info">Product Information</string>
    <string name="expression_menu_saveFace">Save current face</string>

</resources>
