<?xml version="1.0" encoding="utf-8"?>

<!-- 

  Copyright 2014 Sergio Carrozzo

  This file is part of Facial Expression Recognizer.

  Facial Expression Recognizer is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

   Facial Expression Recognizer is distributed in the hope that it will be useful,
   but WITHOUT ANY WARRANTY; without even the implied warranty of
   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
   GNU General Public License for more details.

   You should have received a copy of the GNU General Public License
   along with Facial Expression Recognizer.  If not, see <http://www.gnu.org/licenses/>.
   
 -->


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollViewSettings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="vertical"
    tools:context=".Activities.SettingsActivity" >

    <LinearLayout
        android:id="@+id/linearHomelayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:id="@+id/settings_layout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="90dp" >

            <RadioButton
                android:id="@+id/radio0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/settings_radioRandom" />

            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_radioSelect" />
            
           </RadioGroup>

           <TextView
               android:id="@+id/settings_textView"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_alignParentTop="true"
               android:layout_centerHorizontal="true"
               android:layout_marginTop="30dp"
               android:text="@string/settings_textview"
               android:textAppearance="?android:attr/textAppearanceLarge" />

           <TextView
               android:id="@+id/CaptureAndRec_details"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_alignBaseline="@+id/btn_barsColor"
               android:layout_alignBottom="@+id/btn_barsColor"
               android:layout_alignLeft="@+id/labelColor"
               android:text="@string/settings_textviewBars"
               android:textAppearance="?android:attr/textAppearanceSmall" />

           <TextView
               android:id="@+id/labelColor"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_alignBaseline="@+id/btn_labelColor"
               android:layout_alignBottom="@+id/btn_labelColor"
               android:layout_alignLeft="@+id/settings_textView"
               android:text="@string/settings_textviewLabel"
               android:textAppearance="?android:attr/textAppearanceSmall" />

           <Button
               android:id="@+id/btn_labelColor"
               style="?android:attr/spinnerStyle"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_below="@+id/radioGroup1"
               android:layout_marginLeft="19dp"
               android:layout_marginTop="20dp"
               android:layout_toRightOf="@+id/labelColor"
               android:text="-----------" />

           <Button
               android:id="@+id/btn_barsColor"
               style="?android:attr/spinnerStyle"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_alignLeft="@+id/btn_labelColor"
               android:layout_below="@+id/btn_labelColor"
               android:text="-----------" />
           
           <View 
                  android:id="@+id/voidSpace"
                  android:layout_height="30dp"
                  android:layout_width="0dp"
                  android:layout_below="@+id/btn_barsColor"/>
                
           
        </RelativeLayout>

    </LinearLayout>

</ScrollView>